src/index.css
body[data-theme="light"] {
  /* --background-default: linear-gradient(to bottom, #f5f5f5, #e8daef); */
  /* --text-secondary: #857873; */
  --text-primary: #2f204e;
  --text-emphasis: rgb(112, 215, 250);
  --text-secondary: #300e0e;
  --follow-container: rgb(84, 162, 76);
  --follow-text: rgb(112, 215, 250);
  --wave-btn-background: rgb(174, 229, 247);
  --wave-btn-box-shadow: 2px 2px 4px #b0eaee, -2px -2px 4px #b1c7e9,
    inset 2px 2px 6px #b0eaee, inset -2px -2px 6px #b1c7e9;
  --service-background: #d2e4f1;
  --service-active: rgb(174, 229, 247);
  --form-input-focus: #6c63ff;
  --linear-progress-bar-root: #c2def1;
  --lang-switch-background: #ebebeb;
  --toggle-btn-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.4),
    inset 0px -2px 1px rgba(0, 0, 0, 0.4);
}

body[data-theme="dark"] {
  /* --background-default: linear-gradient(to bottom, #12071f, #2f204e); */
  --text-primary: white;
  --text-emphasis: pink;
  --text-secondary: #ddd;
  --follow-container: #2f204e;
  --follow-text: #dd4c62;
  --wave-btn-background: rgba(255, 192, 203, 0.525);
  --wave-btn-box-shadow: 2px 2px 4px #d37e7e, -2px -2px 4px #d27d84,
    inset 2px 2px 6px #d37e7e, inset -2px -2px 6px #d27d84;
  --service-background: #2f213f;
  --service-active: #50396a;
  --form-input-focus: pink;
  --linear-progress-bar-root: white;
  --lang-switch-background: #242424;
  --toggle-btn-box-shadow: inset 0px 2px 2px rgba(236, 231, 231, 0.4),
    inset 0px -2px 2px rgba(206, 230, 231, 0.4);
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  transition: color 0.3s ease-in-out;
}

html {
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;

  /* Prevent scroll bar from showing up because of PortfolioSection width */
  overflow-x: hidden;
}

body {
  position: relative;
  background: linear-gradient(to bottom, #f5f5f5, #e8daef);
  transition: background 5s ease, color 0.3s ease;
  color: var(--text-primary);
  min-height: 100vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: linear-gradient(to bottom, #12071f, #2f204e);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  z-index: -2;
}

/* For smooth transition between light and dark mode  */
body[data-theme="dark"]::after {
  opacity: 1;
}

a {
  text-decoration: none;
  color: white;
}

.container {
  max-width: 1536px;
  padding: 0 16px;
  margin: 0 auto;
}

section {
  height: 100vh;
  scroll-snap-align: center;
}

.loading-skeleton {
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: center;
  align-items: center;
  padding-top: 30px;
}

.loading-skeleton p {
  font-size: 28px;
  font-weight: 500;
  letter-spacing: 1px;
}

.MuiLinearProgress-root {
  display: block;
  width: 100%;
  border-radius: 10px;
  height: 8px !important;
  background-color: var(--linear-progress-bar-root) !important;
}
.MuiLinearProgress-bar {
  background-color: var(--text-emphasis) !important;
}

@media (min-width: 640px) {
  .container {
    max-width: 640px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}
@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}
@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
  }
}

